crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_tag_59_empty_false_parameter_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
(\tag#21 : int fields#22 : list Data -> case@Data constrData tag#21 fields#22 of
  DataConstr pair#23 -> pair#23
  _ -> trace "cold" in error) 59 (con (list data) [(I 42)])
--- unoptimized UPLC
(program 1.1.0
  [[(lam tag_21
    (lam fields_22
      [(lam generated_24
        (force
          [[[[[[(force (builtin chooseData)) generated_24]
            (delay [(lam pair_23 pair_23) [(builtin unConstrData) generated_24]])]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
        [[(builtin constrData) tag_21] fields_22]]))
    (con integer 59)]
    (con (list data) [(I 42)])])
--- optimized Core
let anf#4 : Data = constrData 59 (con (list data) [(I 42)]) in
case@Data anf#4 of
  DataConstr pair#3 -> pair#3
  _ -> trace "cold" in error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam builtin_5
      [(lam partial_6
        [(lam anf_1
          [(lam generated_4
            (force
              [[[[[[builtin_5 generated_4]
                (delay [(lam pair_2 pair_2) [(builtin unConstrData) generated_4]])]
                (delay (force [partial_6 (delay (error))]))]
                (delay (force [partial_6 (delay (error))]))]
                (delay (force [partial_6 (delay (error))]))]
                (delay (force [partial_6 (delay (error))]))]))
            anf_1])
          [[(builtin constrData) (con integer 59)] (con (list data) [(I 42)])]])
        [builtin_3 (con string "cold")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
(\tag#21 : int fields#22 : list Data -> let anf#24 : Data = constrData tag#21 fields#22 in
case@Data anf#24 of
  DataConstr pair#23 -> pair#23
  _ -> trace "cold" in error) 59 (con (list data) [(I 42)])
--- isolated folded Core
(\tag#21 : int fields#22 : list Data -> let anf#24 : Data = constrData tag#21 fields#22 in
let pair#23 : pair int (list Data) = unConstrData anf#24 in
pair#23) 59 (con (list data) [(I 42)])
--- isolated cleaned Core
let anf#24 : Data = constrData 59 (con (list data) [(I 42)]) in
unConstrData anf#24
--- isolated UPLC before
(program 1.1.0
  [[(lam tag_21
    (lam fields_22
      [(lam anf_24
        [(lam generated_25
          (force
            [[[[[[(force (builtin chooseData)) generated_25]
              (delay [(lam pair_23 pair_23) [(builtin unConstrData) generated_25]])]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
          anf_24])
        [[(builtin constrData) tag_21] fields_22]]))
    (con integer 59)]
    (con (list data) [(I 42)])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_24 [(builtin unConstrData) anf_24])
    [[(builtin constrData) (con integer 59)] (con (list data) [(I 42)])]])
--- result
(con (pair integer (list data)) (59, [(I 42)]))
--- logs
[]
