crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_tag_59_empty_true_parameter_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
(\tag#29 : int fields#30 : list Data -> case@Data constrData tag#29 fields#30 of
  DataConstr pair#31 -> pair#31
  _ -> trace "cold" in error) 59 (con (list data) [])
--- unoptimized UPLC
(program 1.1.0
  [[(lam tag_29
    (lam fields_30
      [(lam generated_32
        (force
          [[[[[[(force (builtin chooseData)) generated_32]
            (delay [(lam pair_31 pair_31) [(builtin unConstrData) generated_32]])]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
        [[(builtin constrData) tag_29] fields_30]]))
    (con integer 59)]
    (con (list data) [])])
--- optimized Core
(con (pair integer (list data)) (59, []))
--- optimized UPLC
(program 1.1.0 (con (pair integer (list data)) (59, [])))
--- isolated pass
--- isolated ANF input
(\tag#29 : int fields#30 : list Data -> let anf#32 : Data = constrData tag#29 fields#30 in
case@Data anf#32 of
  DataConstr pair#31 -> pair#31
  _ -> trace "cold" in error) 59 (con (list data) [])
--- isolated folded Core
(\tag#29 : int fields#30 : list Data -> let anf#32 : Data = constrData tag#29 fields#30 in
let pair#31 : pair int (list Data) = unConstrData anf#32 in
pair#31) 59 (con (list data) [])
--- isolated cleaned Core
let anf#32 : Data = constrData 59 (con (list data) []) in
unConstrData anf#32
--- isolated UPLC before
(program 1.1.0
  [[(lam tag_29
    (lam fields_30
      [(lam anf_32
        [(lam generated_33
          (force
            [[[[[[(force (builtin chooseData)) generated_33]
              (delay [(lam pair_31 pair_31) [(builtin unConstrData) generated_33]])]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
          anf_32])
        [[(builtin constrData) tag_29] fields_30]]))
    (con integer 59)]
    (con (list data) [])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_32 [(builtin unConstrData) anf_32])
    [[(builtin constrData) (con integer 59)] (con (list data) [])]])
--- result
(con (pair integer (list data)) (59, []))
--- logs
[]
