crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_tag_failure_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#11 : Data = constrData (trace "tag" in error) (trace "fields" in (con (list data) [(I 42)])) in
let effect#12 : int = trace "between" in 0 in
case@Data data#11 of
  DataConstr pair#13 -> trace "selected" in 9
--- unoptimized UPLC
(program 1.1.0
  [(lam data_11
    [(lam effect_12
      [(lam generated_14
        (force
          [[[[[[(force (builtin chooseData)) generated_14]
            (delay
              (force
                [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]
            (delay (error))]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        data_11])
      (force
        [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
    [[(builtin constrData)
      (force [[(force (builtin trace)) (con string "tag")] (delay (error))])]
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])]])
--- optimized Core
let anf#4 : int = trace "tag" in error in
let anf#5 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#1 : Data = constrData anf#4 anf#5 in
let effect#2 : int = trace "between" in 0 in
trace "selected" in 9
--- optimized UPLC
(program 1.1.0
  [(lam builtin_9
    [(lam anf_3
      [(lam anf_6
        [(lam data_7
          [(lam effect_8
            (force [[builtin_9 (con string "selected")] (delay (con integer 9))]))
            (force [[builtin_9 (con string "between")] (delay (con integer 0))])])
          [[(builtin constrData) anf_3] anf_6]])
        (force [[builtin_9 (con string "fields")] (delay (con (list data) [(I 42)]))])])
      (force [[builtin_9 (con string "tag")] (delay (error))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#14 : int = trace "tag" in error in
let anf#15 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#11 : Data = constrData anf#14 anf#15 in
let effect#12 : int = trace "between" in 0 in
case@Data data#11 of
  DataConstr pair#13 -> trace "selected" in 9
--- isolated folded Core
let anf#14 : int = trace "tag" in error in
let anf#15 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#11 : Data = constrData anf#14 anf#15 in
let effect#12 : int = trace "between" in 0 in
trace "selected" in 9
--- isolated cleaned Core
let anf#14 : int = trace "tag" in error in
let anf#15 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#11 : Data = constrData anf#14 anf#15 in
let effect#12 : int = trace "between" in 0 in
trace "selected" in 9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_14
    [(lam anf_15
      [(lam data_11
        [(lam effect_12
          [(lam generated_16
            (force
              [[[[[[(force (builtin chooseData)) generated_16]
                (delay
                  (force
                    [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]
                (delay (error))]
                (delay (error))]
                (delay (error))]
                (delay (error))]))
            data_11])
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_14] anf_15]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (error))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_14
    [(lam anf_15
      [(lam data_11
        [(lam effect_12
          (force
            [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_14] anf_15]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (error))])])
--- result
error: ExplicitErrorTerm
--- logs
["tag"]
