crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_tag_failure_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#16 : Data = constrData (trace "tag" in error) (trace "fields" in (con (list data) [(I 42)])) in
let effect#17 : int = trace "between" in 0 in
case@Data data#16 of
  DataConstr pair#18 -> trace "selected" in fstPair pair#18
--- unoptimized UPLC
(program 1.1.0
  [(lam data_16
    [(lam effect_17
      [(lam generated_19
        (force
          [[[[[[(force (builtin chooseData)) generated_19]
            (delay
              [(lam pair_18
                (force
                  [[(force (builtin trace)) (con string "selected")]
                    (delay [(force (force (builtin fstPair))) pair_18])]))
                [(builtin unConstrData) generated_19]])]
            (delay (error))]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        data_16])
      (force
        [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
    [[(builtin constrData)
      (force [[(force (builtin trace)) (con string "tag")] (delay (error))])]
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])]])
--- optimized Core
let anf#4 : int = trace "tag" in error in
let anf#5 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#1 : Data = constrData anf#4 anf#5 in
let effect#2 : int = trace "between" in 0 in
let pair#3 : pair int (list Data) = unConstrData data#1 in
trace "selected" in fstPair pair#3
--- optimized UPLC
(program 1.1.0
  [(lam builtin_11
    [(lam builtin_12
      [(lam anf_6
        [(lam anf_7
          [(lam data_8
            [(lam effect_9
              [(lam pair_10
                (force [[builtin_12 (con string "selected")] (delay [builtin_11 pair_10])]))
                [(builtin unConstrData) data_8]])
              (force [[builtin_12 (con string "between")] (delay (con integer 0))])])
            [[(builtin constrData) anf_6] anf_7]])
          (force [[builtin_12 (con string "fields")] (delay (con (list data) [(I 42)]))])])
        (force [[builtin_12 (con string "tag")] (delay (error))])])
      (force (builtin trace))])
    (force (force (builtin fstPair)))])
--- isolated pass
--- isolated ANF input
let anf#19 : int = trace "tag" in error in
let anf#20 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#16 : Data = constrData anf#19 anf#20 in
let effect#17 : int = trace "between" in 0 in
case@Data data#16 of
  DataConstr pair#18 -> trace "selected" in fstPair pair#18
--- isolated folded Core
let anf#19 : int = trace "tag" in error in
let anf#20 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#16 : Data = constrData anf#19 anf#20 in
let effect#17 : int = trace "between" in 0 in
let pair#18 : pair int (list Data) = unConstrData data#16 in
trace "selected" in fstPair pair#18
--- isolated cleaned Core
let anf#19 : int = trace "tag" in error in
let anf#20 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#16 : Data = constrData anf#19 anf#20 in
let effect#17 : int = trace "between" in 0 in
let pair#18 : pair int (list Data) = unConstrData data#16 in
trace "selected" in fstPair pair#18
--- isolated UPLC before
(program 1.1.0
  [(lam anf_19
    [(lam anf_20
      [(lam data_16
        [(lam effect_17
          [(lam generated_21
            (force
              [[[[[[(force (builtin chooseData)) generated_21]
                (delay
                  [(lam pair_18
                    (force
                      [[(force (builtin trace)) (con string "selected")]
                        (delay [(force (force (builtin fstPair))) pair_18])]))
                    [(builtin unConstrData) generated_21]])]
                (delay (error))]
                (delay (error))]
                (delay (error))]
                (delay (error))]))
            data_16])
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_19] anf_20]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (error))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_19
    [(lam anf_20
      [(lam data_16
        [(lam effect_17
          [(lam pair_18
            (force
              [[(force (builtin trace)) (con string "selected")]
                (delay [(force (force (builtin fstPair))) pair_18])]))
            [(builtin unConstrData) data_16]])
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_19] anf_20]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (error))])])
--- result
error: ExplicitErrorTerm
--- logs
["tag"]
