crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_too_large_retained.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(&a, core,\nformat!(\"--- isolated Core before\\n{}\\n--- isolated Core after\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\",\npretty(before), pretty(after), nash_plutus::pretty::term(left),\nnash_plutus::pretty::term(right)))"
---
--- unoptimized Core
case@Data constrData 18446744073709551616 (con (list data) []) of
  DataConstr unused#3 -> 9
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_4
    (force
      [[[[[[(force (builtin chooseData)) generated_4] (delay (con integer 9))]
        (delay (error))]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [[(builtin constrData) (con integer 18446744073709551616)] (con (list data) [])]])
--- optimized Core
let anf#2 : Data = constrData 18446744073709551616 (con (list data) []) in
case@Data anf#2 of
  DataConstr unused#1 -> 9
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam anf_3
      [(lam generated_5
        (force
          [[[[[[builtin_6 generated_5] (delay (con integer 9))] (delay (error))]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        anf_3])
      [[(builtin constrData) (con integer 18446744073709551616)] (con (list data) [])]])
    (force (builtin chooseData))])
--- isolated pass
--- isolated Core before
let anf#4 : Data = constrData 18446744073709551616 (con (list data) []) in
case@Data anf#4 of
  DataConstr unused#3 -> 9
--- isolated Core after
let anf#4 : Data = constrData 18446744073709551616 (con (list data) []) in
9
--- isolated UPLC before
[(lam anf_4
  [(lam generated_5
    (force
      [[[[[[(force (builtin chooseData)) generated_5] (delay (con integer 9))]
        (delay (error))]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    anf_4])
  [[(builtin constrData) (con integer 18446744073709551616)] (con (list data) [])]]
--- isolated UPLC after
[(lam anf_4 (con integer 9))
  [[(builtin constrData) (con integer 18446744073709551616)] (con (list data) [])]]
