crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_traced.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (trace "producer" in constrData 59 (con (list data) [(I 42)])) of
  DataConstr pair#11 -> pair#11
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_12
    (force
      [[[[[[(force (builtin chooseData)) generated_12]
        (delay [(lam pair_11 pair_11) [(builtin unConstrData) generated_12]])]
        (delay (error))]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    (force
      [[(force (builtin trace)) (con string "producer")]
        (delay [[(builtin constrData) (con integer 59)] (con (list data) [(I 42)])])])])
--- optimized Core
let anf#2 : Data = trace "producer" in (con data (Constr 59 [I 42])) in
case@Data anf#2 of
  DataConstr pair#1 -> pair#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam builtin_7
      [(lam anf_3
        [(lam generated_5
          (force
            [[[[[[builtin_6 generated_5]
              (delay [(lam pair_4 pair_4) [(builtin unConstrData) generated_5]])]
              (delay (error))]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          anf_3])
        (force
          [[builtin_7 (con string "producer")] (delay (con data (Constr 59 [I 42])))])])
      (force (builtin trace))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#12 : Data = trace "producer" in constrData 59 (con (list data) [(I 42)]) in
case@Data anf#12 of
  DataConstr pair#11 -> pair#11
--- isolated folded Core
let anf#12 : Data = trace "producer" in constrData 59 (con (list data) [(I 42)]) in
case@Data anf#12 of
  DataConstr pair#11 -> pair#11
--- isolated cleaned Core
let anf#12 : Data = trace "producer" in constrData 59 (con (list data) [(I 42)]) in
case@Data anf#12 of
  DataConstr pair#11 -> pair#11
--- isolated UPLC before
(program 1.1.0
  [(lam anf_12
    [(lam generated_13
      (force
        [[[[[[(force (builtin chooseData)) generated_13]
          (delay [(lam pair_11 pair_11) [(builtin unConstrData) generated_13]])]
          (delay (error))]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_12])
    (force
      [[(force (builtin trace)) (con string "producer")]
        (delay [[(builtin constrData) (con integer 59)] (con (list data) [(I 42)])])])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_12
    [(lam generated_13
      (force
        [[[[[[(force (builtin chooseData)) generated_13]
          (delay [(lam pair_11 pair_11) [(builtin unConstrData) generated_13]])]
          (delay (error))]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_12])
    (force
      [[(force (builtin trace)) (con string "producer")]
        (delay [[(builtin constrData) (con integer 59)] (con (list data) [(I 42)])])])])
--- result
(con (pair integer (list data)) (59, [(I 42)]))
--- logs
["producer"]
