crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_valid_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#1 : Data = constrData (trace "tag" in 59) (trace "fields" in (con (list data) [(I 42)])) in
let effect#2 : int = trace "between" in 0 in
case@Data data#1 of
  DataConstr pair#3 -> trace "selected" in 9
--- unoptimized UPLC
(program 1.1.0
  [(lam data_1
    [(lam effect_2
      [(lam generated_4
        (force
          [[[[[[(force (builtin chooseData)) generated_4]
            (delay
              (force
                [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]
            (delay (error))]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        data_1])
      (force
        [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
    [[(builtin constrData)
      (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])]
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])]])
--- optimized Core
let anf#7 : int = trace "tag" in 59 in
let anf#8 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#4 : Data = constrData anf#7 anf#8 in
let effect#5 : int = trace "between" in 0 in
case@Data data#4 of
  DataConstr pair#6 -> trace "selected" in 9
--- optimized UPLC
(program 1.1.0
  [(lam builtin_12
    [(lam builtin_13
      [(lam anf_1
        [(lam anf_2
          [(lam data_3
            [(lam effect_9
              [(lam generated_11
                (force
                  [[[[[[builtin_13 generated_11]
                    (delay (force [[builtin_12 (con string "selected")] (delay (con integer 9))]))]
                    (delay (error))]
                    (delay (error))]
                    (delay (error))]
                    (delay (error))]))
                data_3])
              (force [[builtin_12 (con string "between")] (delay (con integer 0))])])
            [[(builtin constrData) anf_1] anf_2]])
          (force [[builtin_12 (con string "fields")] (delay (con (list data) [(I 42)]))])])
        (force [[builtin_12 (con string "tag")] (delay (con integer 59))])])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#4 : int = trace "tag" in 59 in
let anf#5 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#1 : Data = constrData anf#4 anf#5 in
let effect#2 : int = trace "between" in 0 in
case@Data data#1 of
  DataConstr pair#3 -> trace "selected" in 9
--- isolated folded Core
let anf#4 : int = trace "tag" in 59 in
let anf#5 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#1 : Data = constrData anf#4 anf#5 in
let effect#2 : int = trace "between" in 0 in
trace "selected" in 9
--- isolated cleaned Core
let anf#4 : int = trace "tag" in 59 in
let anf#5 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#1 : Data = constrData anf#4 anf#5 in
let effect#2 : int = trace "between" in 0 in
trace "selected" in 9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_4
    [(lam anf_5
      [(lam data_1
        [(lam effect_2
          [(lam generated_6
            (force
              [[[[[[(force (builtin chooseData)) generated_6]
                (delay
                  (force
                    [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]
                (delay (error))]
                (delay (error))]
                (delay (error))]
                (delay (error))]))
            data_1])
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_4] anf_5]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_4
    [(lam anf_5
      [(lam data_1
        [(lam effect_2
          (force
            [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_4] anf_5]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])])
--- result
(con integer 9)
--- logs
["tag", "fields", "between", "selected"]
