crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_valid_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#6 : Data = constrData (trace "tag" in 59) (trace "fields" in (con (list data) [(I 42)])) in
let effect#7 : int = trace "between" in 0 in
case@Data data#6 of
  DataConstr pair#8 -> trace "selected" in fstPair pair#8
--- unoptimized UPLC
(program 1.1.0
  [(lam data_6
    [(lam effect_7
      [(lam generated_9
        (force
          [[[[[[(force (builtin chooseData)) generated_9]
            (delay
              [(lam pair_8
                (force
                  [[(force (builtin trace)) (con string "selected")]
                    (delay [(force (force (builtin fstPair))) pair_8])]))
                [(builtin unConstrData) generated_9]])]
            (delay (error))]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        data_6])
      (force
        [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
    [[(builtin constrData)
      (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])]
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])]])
--- optimized Core
let anf#4 : int = trace "tag" in 59 in
let anf#5 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#1 : Data = constrData anf#4 anf#5 in
let effect#2 : int = trace "between" in 0 in
case@Data data#1 of
  DataConstr pair#3 -> trace "selected" in fstPair pair#3
--- optimized UPLC
(program 1.1.0
  [(lam builtin_12
    [(lam builtin_13
      [(lam builtin_14
        [(lam anf_6
          [(lam anf_7
            [(lam data_8
              [(lam effect_9
                [(lam generated_11
                  (force
                    [[[[[[builtin_14 generated_11]
                      (delay
                        [(lam pair_10
                          (force [[builtin_13 (con string "selected")] (delay [builtin_12 pair_10])]))
                          [(builtin unConstrData) generated_11]])]
                      (delay (error))]
                      (delay (error))]
                      (delay (error))]
                      (delay (error))]))
                  data_8])
                (force [[builtin_13 (con string "between")] (delay (con integer 0))])])
              [[(builtin constrData) anf_6] anf_7]])
            (force [[builtin_13 (con string "fields")] (delay (con (list data) [(I 42)]))])])
          (force [[builtin_13 (con string "tag")] (delay (con integer 59))])])
        (force (builtin chooseData))])
      (force (builtin trace))])
    (force (force (builtin fstPair)))])
--- isolated pass
--- isolated ANF input
let anf#9 : int = trace "tag" in 59 in
let anf#10 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#6 : Data = constrData anf#9 anf#10 in
let effect#7 : int = trace "between" in 0 in
case@Data data#6 of
  DataConstr pair#8 -> trace "selected" in fstPair pair#8
--- isolated folded Core
let anf#9 : int = trace "tag" in 59 in
let anf#10 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#6 : Data = constrData anf#9 anf#10 in
let effect#7 : int = trace "between" in 0 in
let pair#8 : pair int (list Data) = unConstrData data#6 in
trace "selected" in fstPair pair#8
--- isolated cleaned Core
let anf#9 : int = trace "tag" in 59 in
let anf#10 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#6 : Data = constrData anf#9 anf#10 in
let effect#7 : int = trace "between" in 0 in
let pair#8 : pair int (list Data) = unConstrData data#6 in
trace "selected" in fstPair pair#8
--- isolated UPLC before
(program 1.1.0
  [(lam anf_9
    [(lam anf_10
      [(lam data_6
        [(lam effect_7
          [(lam generated_11
            (force
              [[[[[[(force (builtin chooseData)) generated_11]
                (delay
                  [(lam pair_8
                    (force
                      [[(force (builtin trace)) (con string "selected")]
                        (delay [(force (force (builtin fstPair))) pair_8])]))
                    [(builtin unConstrData) generated_11]])]
                (delay (error))]
                (delay (error))]
                (delay (error))]
                (delay (error))]))
            data_6])
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_9] anf_10]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_9
    [(lam anf_10
      [(lam data_6
        [(lam effect_7
          [(lam pair_8
            (force
              [[(force (builtin trace)) (con string "selected")]
                (delay [(force (force (builtin fstPair))) pair_8])]))
            [(builtin unConstrData) data_6]])
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_9] anf_10]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])])
--- result
(con integer 59)
--- logs
["tag", "fields", "between", "selected"]
